--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
